<resources>
    <string name="app_name">My Slide Show</string>
    <string name="directory_not_set">Source folder not selected</string>
    <string name="setup">Setup show</string>
    <string name="disable">Disable show</string>
    <string name="open_go">Choose this directory</string>
    <string name="open_back">Back</string>
    <string name="date_action">Date of the action</string>
    <string name="interval">Interval</string>

    <string name="start_action">Start action</string>
    <string name="end_action">End action</string>
    <string name="start_service">Activate</string>
    <string name="next_setting">Next</string>
    <string name="start">Activated</string>

    <string name="source_folder">Source folder: %s</string>
    <string name="start_time">Start time: %s</string>
    <string name="end_time">End time: %s</string>

    <string name="wrong_start">Wrong start time</string>
    <string name="wrong_end">Wrong end time</string>
    <string name="wrong_folder">Folder not selected</string>
    <string name="wrong_folder_empty">Folder not contains pictures ".jpg" format</string>



</resources>
