<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setDirTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/directory_not_set"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/setDirButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/set_directory"
                android:textSize="14sp" />

            <Button
                android:id="@+id/startService"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/start_service"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/startTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_action"
                android:textSize="14sp" />

            <TimePicker
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/endTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_action"
                android:textSize="14sp" />

            <TimePicker
                android:id="@+id/endTime"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval" />

            <NumberPicker
                android:id="@+id/intervalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
